tests/ui/consts/normalize-before-const-arg-has-type-goal.stderr
error[E0308]: mismatched types
  --> $DIR/normalize-before-const-arg-has-type-goal.rs:4:8
   |
LL | impl A<{}> for () {}
   |        ^^ expected `bool`, found `()`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
